--- a/_posts/2022-03-16-JS-배열-메소드-3.md
+++ b/_posts/2022-03-16-JS-배열-메소드-3.md
@@ -4,7 +4,7 @@ title: "slice, splice, sort 배열 메소드"
 ---
 
 ### 1. slice   
-> 배열의 일부를 복사
+- 배열의 일부를 복사
 
 ```
 const person = ['Mark', "Lord", "Jeck", "Rose"];
@@ -13,8 +13,10 @@ person.slice(2) = ["Jeck", "Rose"]
 person.slice(0, 2) = ['Mark', 'Lord']
 ```
 
+***
+
 ### 2. splice   
-> 기존 요소들을 제거하거나 새로운 요소를 추가
+- 기존 요소들을 제거하거나 새로운 요소를 추가
 
 ```
 const person = ["Mark", "Lord", "Jeck", "Rose"];
@@ -28,8 +30,10 @@ person.splice(1, 0, "Ian")
 const person = ["Lord", "Ian" "Jeck", "Rose"];
 ```
 
+***
+
 ### 3. sort     
-> 첫 번째 자리 정렬
+- 첫 번째 자리 정렬
 
 ```
 const score = [-0.25, -5.3, 0.82, 1.2, 37,50, 100, 2000, 84, 93.55, 293, 67];
