--- a/_posts/2022-03-17-JS-콜백-배열-2.md
+++ b/_posts/2022-03-17-JS-콜백-배열-2.md
@@ -4,7 +4,7 @@ title: "some, every, reduce 메소드"
 ---
 
 ### 1. some 메소드   
-> 하나 또는 일부의 여부만 봄
+- 하나 또는 일부의 여부만 봄
 
 ```
 const exams = [78, 92, 58, 64, 85, 91, 85];
@@ -25,8 +25,10 @@ movies.some(movie => movie.year > 2000) -- > ture
 movies.some(movie => movie.score < 60) -- > false
 ```
 
+***
+
 ### 2. every 메소드   
-> 전체의 여부를 봄
+- 전체의 여부를 봄
 
 ```
 const exams = [78, 92, 58, 64, 85, 91, 85];
@@ -47,8 +49,10 @@ movies.every(movie => movie.year > 1980) -- > ture
 movies.every(movie => movie.score < 80) -- > false
 ```
 
+***
+
 ### 3. reduce 메소드   
-> reduce(총, 요소)
+- reduce(총, 요소)
 
 ```
 const number = [1, 2, 3, 4, 5];
