--- a/_posts/2022-03-17-JS-콜백-배열-1.md
+++ b/_posts/2022-03-17-JS-콜백-배열-1.md
@@ -4,8 +4,8 @@ title: "forEach, map, filter 배열 메소드"
 ---
 
 ### 1. forEach 메소드   
-> 함수를 인수로 받음   
-> 배열 안의 요소 각각에 대해 함수와 코드를 한번씩 실행
+- 함수를 인수로 받음   
+- 배열 안의 요소 각각에 대해 함수와 코드를 한번씩 실행
 
 ```
 const number = [1, 2, 3, 4, 5];
@@ -28,8 +28,10 @@ movies.forEach(function (movie) {
 })
 ```
 
+***
+
 ### 2. map 메소드   
-> forEach 메소드와 비슷하지만 map 메소드는 새로운 배열을 생성
+- forEach 메소드와 비슷하지만 map 메소드는 새로운 배열을 생성
 
 ```
 const number = [1, 2, 3, 4, 5];
@@ -52,9 +54,11 @@ const titles = movies.map(function(movie) {
 })
 ```
 
+***
+
 ### 3. filter 메소드
-> 배열에서 필터링을 하거나 부분을 모아 새로운 배열을 만듦   
-> 콜백을 전달해서 이 콜백이 참이나 거짓을 반환하고 참을 반환하면 필터링된 요소들의 새로운 배열 생성
+- 배열에서 필터링을 하거나 부분을 모아 새로운 배열을 만듦   
+- 콜백을 전달해서 이 콜백이 참이나 거짓을 반환하고 참을 반환하면 필터링된 요소들의 새로운 배열 생성
 
 ```
 const num = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10];
