Update and rename 2022-03-17-JS-함수.md to 2022-03-17-JS-함수-1.md

--- a/_posts/2022-03-17-JS-함수-1.md
+++ b/_posts/2022-03-17-JS-함수-1.md
@@ -12,10 +12,12 @@ function greet() {
 greet();
 ```
 
-### 2. 인수   
-> 변수안에 인수를 적고, 적은 인수 값에 따라 출력이 다르게 나타난다.   
+***
 
-> > 1 ) 인수가 하나일 경우
+### 2. 인수   
+- 변수안에 인수를 적고, 적은 인수 값에 따라 출력이 다르게 나타난다.   
+
+**1 ) 인수가 하나일 경우**
 
 ```
 function greet(name) {
@@ -24,7 +26,7 @@ function greet(name) {
 greet('Mark');
 ```
 
-> > 2 ) 인수가 여러 개일 경우
+**2 ) 인수가 여러 개일 경우**
 
 ```
 function person(name, age) {
@@ -32,8 +34,10 @@ function person(name, age) {
 }
 ```
 
+***
+
 ### 3. 반환   
-> console.log는 출력, return은 값을 저장
+- console.log는 출력, return은 값을 저장
 
 ```
 function add(num1, num2) {
